--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -1,23 +1,51 @@
 <div>
     <header class="header">
-        <div class="logo">Logo</div>
-        <nav class="menu">
-            <ul>
-                <li><a routerLink="/">INICIO</a>
-                <li><a routerLink="/espacios">ESPACIOS</a>
-                <li><a routerLink="/precios">PRECIOS</a>
-                <li><a routerLink="/acceso-miembros">ACCESO MIEMBROS</a>
-                <li><a routerLink="/registro">REGISTRO</a>
-                <li><a routerLink="/contacto">CONTACTO</a>
-            </ul>
-        </nav>
+      <div class="logo">Logo</div>
+      <nav class="menu">
+        <ul>
+          <li><a routerLink="/">INICIO</a></li>
+          <li><a routerLink="/espacios">ESPACIOS</a></li>
+          <li><a routerLink="/acceso-miembros">ACCESO MIEMBROS</a></li>
+          <li><a routerLink="/registro">REGISTRO</a></li>
+          <li><a routerLink="/contacto">CONTACTO</a></li>
+        </ul>
+      </nav>
     </header>
-    
+  
     <main>
-        <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </main>
-    
-    <footer class="footer">
-        
+  
+    <footer>
+      <div class="footer-content">
+        <div class="footer-section">
+          <div class="footer-left">
+            <p>Ayuntamiento de Carmona</p>
+            <p>C/ El Salvador, 2 · 41410 Carmona (Sevilla)</p>
+            <p>Tfno.: 954.14.00.11 · Fax: 954.19.12.37.</p>
+            <p>Email: carmona@carmona.org</p>
+            <p>Web: https://www.carmona.org</p>
+          </div>
+        </div>
+        <div class="footer-section">
+          <div class="footer-center">
+            <img src="c:\Users\Antonio Cantos\Desktop\PROYECTO FOC\IMAGENES\formacionyempleo.png.jpg" alt="Logo Ayuntamiento de Carmona" />
+          </div>
+        </div>
+        <div class="footer-section">
+          <div class="footer-right">
+            <p>Organismo Autónomo Local Centro Municipal de Formación Integral</p>
+            <p>C/ Carmen Llorca, s/n 41410 Carmona, Sevilla</p>
+            <p>Teléfono: 954 19 00 93 | 954 19 20 10 | 954 19 20 11</p>
+            <p>Email: info@formacionyempleo.org</p>
+          </div>
+        </div>
+        <div class="footer-section">
+          <p>© 2023 Todos los derechos reservados</p>
+        </div>
+      </div>
     </footer>
-</div>
+    
+    
+  </div>
+  
