--- a/src/app/pages/signup-form/signup-form.component.html
+++ b/src/app/pages/signup-form/signup-form.component.html
@@ -1,1 +1,139 @@
-<p>signup-form works!</p>
+<div class="register-container">
+  <h2>Registro</h2>
+  <form class="custom-form" method="post">
+    <div class="form-group">
+      <label for="name">Nombre:</label>
+      <input
+        type="text"
+        [formControl]="name"
+        name="name"
+        placeholder="Introduzca su nombre de pila"
+        required
+        maxlength="10"
+        [ngClass]="{'is-valid': !name.invalid, 'is-invalid': name.invalid}"
+      />
+      <div [hidden]="name.valid || name.pristine">
+        <span *ngIf="name.errors?.['maxlength']">
+          Introduzca un nombre de pila con 10 caracteres máximo
+        </span>
+        <span *ngIf="name.errors?.['required']">
+          Introduzca un nombre de pila válido por favor
+        </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="lastname">Apellido:</label>
+      <input
+        type="text"
+        [formControl]="lastname"
+        name="lastname"
+        placeholder="Introduzca su apellido"
+        required
+        maxlength="10"
+        [ngClass]="{'is-valid': !lastname.invalid, 'is-invalid': lastname.invalid}"
+      />
+      <div [hidden]="lastname.valid || lastname.pristine">
+        <span *ngIf="lastname.errors?.['maxlength']">
+          Introduzca un apellido con 10 caracteres máximo
+        </span>
+        <span *ngIf="lastname.errors?.['required']">
+          Introduzca un apellido válido por favor
+        </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="dni">DNI:</label>
+      <input
+        type="text"
+        [formControl]="dni"
+        name="dni"
+        placeholder="Ejemplo: 12345678A"
+        required
+        pattern="[0-9]{8}[A-Za-z]{1}"
+        maxlength="9"
+        [ngClass]="{'is-valid': !dni.invalid, 'is-invalid': dni.invalid}"
+      />
+      <small>Formato: 8 dígitos seguidos de 1 letra</small>
+      <div [hidden]="dni.valid || dni.pristine">
+        <span *ngIf="dni.errors?.['required']">
+          Introduzca un DNI válido por favor
+        </span>
+        <span *ngIf="dni.errors?.['pattern']">
+          Introduzca un DNI con el formato correcto
+        </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="email">Correo electrónico:</label>
+      <input
+        type="email"
+        [formControl]="email"
+        name="email"
+        placeholder="juan@gmail.com"
+        required
+        [ngClass]="{'is-valid': !email.invalid, 'is-invalid': email.invalid}"
+      />
+      <div [hidden]="email.valid || email.pristine">
+        <span *ngIf="email.errors?.['required']">
+          Introduzca un correo electrónico válido por favor
+        </span>
+        <span *ngIf="email.errors?.['email']">
+          Introduzca un correo electrónico con el formato correcto
+        </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="numberPhone">Teléfono Móvil:</label>
+      <input
+        type="text"
+        [formControl]="numberPhone"
+        name="numberPhone"
+        placeholder="Ejemplo: 612345678"
+        required
+        pattern="[0-9]{9}"
+        [ngClass]="{'is-valid': !numberPhone.invalid, 'is-invalid': numberPhone.invalid}"
+      />
+      <small>Formato: 9 dígitos sin espacios ni guiones</small>
+      <div [hidden]="numberPhone.valid || numberPhone.pristine">
+        <span *ngIf="numberPhone.errors?.['required']">
+          Introduzca un número de teléfono válido por favor
+        </span>
+        <span *ngIf="numberPhone.errors?.['pattern']">
+          Introduzca un número de teléfono con el formato correcto
+        </span>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Contraseña:</label>
+      <input
+        type="password"
+        [formControl]="password"
+        name="password"
+        placeholder="Password"
+        required
+        minlength="8"
+        [ngClass]="{'is-valid': !password.invalid, 'is-invalid': password.invalid}"
+      />
+      <div [hidden]="password.valid || password.pristine">
+        <span *ngIf="password.errors?.['required']">
+          Introduzca una contraseña válida por favor
+        </span>
+        <span *ngIf="password.errors?.['minlength']">
+          Introduzca una contraseña con el formato correcto
+        </span>
+      </div>
+      <small>Mínimo 8 caracteres</small>
+    </div>
+
+    <div class="form-group">
+      <button type="submit" [hidden]="name.invalid || lastname.invalid || dni.invalid || email.invalid || numberPhone.invalid || password.invalid" (click)="register()">Registrarse</button>
+    </div>
+  </form>
+</div>
+
+  
