--- a/src/app/pages/login-form/login-form.component.css
+++ b/src/app/pages/login-form/login-form.component.css
@@ -1,54 +1,62 @@
 /* Estilos para el formulario de inicio de sesión */
 .login-container {
-    background-color: white;
-    margin: 20px auto;
-    padding: 20px;
-    width: 80%;
-    max-width: 500px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  .login-container h2 {
-    color: black;
-    margin-bottom: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-group label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: black;
-  }
-  
-  .form-group input[type="email"],
-  .form-group input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .form-group small {
-    color: #666;
-    font-size: 12px;
-  }
-  
-  .form-group button {
-    background-color: black;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .form-group button:hover {
-    background-color: #333;
-  }
-  
+  background-color: white;
+  margin: 20px auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.login-container h2 {
+  color: black;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: black;
+}
+
+.form-group input[type="email"],
+.form-group input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form-group small {
+  color: #666;
+  font-size: 12px;
+}
+
+.form-group button {
+  background-color: black;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.form-group button:hover {
+  background-color: #585656;
+}
+
+/* Estilos para los mensajes de error */
+
+
+
+.form-group .is-invalid + div span {
+  color: #dc3545; /* Cambiar el color del texto a rojo en caso de error */
+  font-size: 12px; /* Mantener el tamaño de fuente igual que el resto */
+}
