--- a/src/app/pages/login-form/login-form.component.html
+++ b/src/app/pages/login-form/login-form.component.html
@@ -1,18 +1,54 @@
-
 <div class="login-container">
-    <h2>Login</h2>
-    <form>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Ejemplo: juan@example.com">
-        </div>
-        <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required minlength="8" placeholder="Mínimo 8 caracteres">
-            <small>Mínimo 8 caracteres</small>
-        </div>
-        <div class="form-group">
-            <button type="submit">Iniciar sesión</button>
-        </div>
-    </form>
+  <h2>Login</h2>
+  <form class="custom-form" method="post">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        [formControl]="email"
+        name="email"
+        placeholder="juan@gmail.com"
+        required
+        [ngClass]="{'is-valid': !email.invalid, 'is-invalid': email.invalid}"
+      />
+      <div [hidden]="email.valid || email.pristine">
+        <span *ngIf="email.errors?.['required']">
+          Introduzca un correo electrónico válido por favor
+        </span>
+        <span *ngIf="email.errors?.['email']">
+          Introduzca un correo electrónico con el formato correcto
+        </span>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Contraseña:</label>
+      <input
+        type="password"
+        [formControl]="password"
+        name="password"
+        placeholder="Password"
+        required
+        minlength="8"
+        [ngClass]="{'is-valid': !password.invalid, 'is-invalid': password.invalid}"
+      />
+      <div [hidden]="password.valid || password.pristine">
+        <span *ngIf="password.errors?.['required']">
+          Introduzca una contraseña válida por favor
+        </span>
+        <span *ngIf="password.errors?.['minlength']">
+          Introduzca una contraseña con el formato correcto       
+        </span>
+      </div>
+      <small>Mínimo 8 caracteres</small>
+    </div>
+    <div class="form-group">
+      <button type="submit" [hidden]="password.invalid || email.invalid" (click)="login()">Log in</button>
+    </div>
+  </form>
 </div>
+
+
+
+
+
+
