--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div>
     <header class="header">
-      <div class="logo">Logo</div>
+      <div class="titulo">Coworking Carmona</div>
       <nav class="menu">
         <ul>
           <li><a routerLink="/">INICIO</a></li>
@@ -29,8 +29,7 @@
         </div>
         <div class="footer-section">
           <div class="footer-center">
-            <img src="c:\Users\Antonio Cantos\Desktop\PROYECTO FOC\IMAGENES\formacionyempleo.png.jpg" alt="Logo Ayuntamiento de Carmona" />
-          </div>
+            <img src="./../../assets/sources/formacion y empleo.png" alt="Logo formación y empleo">          </div>
         </div>
         <div class="footer-section">
           <div class="footer-right">
