--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,37 +4,25 @@
     <main>
         <section>
             <h2>Dirección</h2>
-            <p>123 Calle Principal, Ciudad, País</p>
+            <p>C. Cam. de Marruecos, 3, 41410 Carmona, Sevilla</p>
         </section>
         <section>
             <h2>Teléfono</h2>
-            <p>(123) 456-7890</p>
+            <p>Teléfono: 954 19 00 93 | 954 19 20 10 | 954 19 20 11</p>
         </section>
         <section>
             <h2>Correo Electrónico</h2>
-            <p>correo@example.com</p>
+            <p>info@formacionyempleo.org</p>
         </section>
         <section>
-            <h2>Mapa</h2>
+            <h2>Ubicación</h2>
             <div id="map"></div>
-            <script>
-                // Agrega aquí el código para incrustar un mapa (Google Maps u otra API de mapas)
-                // Por ejemplo, puedes usar Google Maps API:
-                function initMap() {
-                    var location = {lat: 40.712776, lng: -74.005974}; // Coordenadas de ejemplo (Nueva York)
-                    var map = new google.maps.Map(document.getElementById('map'), {
-                        center: location,
-                        zoom: 12
-                    });
-                    var marker = new google.maps.Marker({
-                        position: location,
-                        map: map,
-                        title: 'Nuestra Ubicación'
-                    });
-                }
-            </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=TU_CLAVE_DE_API&callback=initMap" async defer></script>
-            <!-- Reemplaza "TU_CLAVE_DE_API" con tu clave de API de Google Maps -->
+            
+            <div class="map-responsive">
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.3356509169444!2d-5.648164625639708!3d37.476404929293764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd128c9df43ac4b9%3A0x157651434d748931!2sC.%20Cam.%20de%20Marruecos%2C%203%2C%2041410%20Carmona%2C%20Sevilla!5e0!3m2!1ses!2ses!4v1693926946047!5m2!1ses!2ses" width="1100" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+                
+                </div>
         </section>
     </main>
     
