--- a/src/app/main-layout/main-layout.component.css
+++ b/src/app/main-layout/main-layout.component.css
@@ -7,11 +7,16 @@
     justify-content: space-between;
     align-items: center;
   }
-  
-  .logo {
-    font-size: 24px;
-    font-weight: bold;
+  .titulo{
+    background-color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(7, 221, 221);
+    text-align: center;
+    font-size: 50px;
+    padding-top: 20px; 
+    padding-bottom: 20px;
   }
+  
   
   .menu ul {
     list-style-type: none;
@@ -30,12 +35,13 @@
   }
   
   .menu a:hover {
-    color: #e0e0e0;
+    color: rgb(7, 221, 221);
   }
   
   /* Estilos para el contenido principal */
   main {
     padding: 20px;
+
   }
   
 /* Estilos para el pie de página al estilo de Apple */
