--- a/src/app/pages/contact/contact.component.css
+++ b/src/app/pages/contact/contact.component.css
@@ -1,66 +1,92 @@
 /* Reset de estilos y ajustes generales */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-  }
-  
-  /* Estilos para el encabezado */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+}
+
+/* Estilos para el encabezado */
+header {
+  background-color: black;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
+/* Estilos para el contenido principal */
+main {
+  padding: 20px;
+}
+
+/* Estilos para las secciones */
+section {
+  background-color: white;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center; /* Centra el texto dentro de las secciones */
+}
+
+h2 {
+  color: black;
+  margin-bottom: 10px;
+}
+
+p {
+  color: #666;
+}
+
+/* Estilos para el pie de página */
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+
+/* Estilos para hacer el sitio responsive */
+@media screen and (max-width: 768px) {
   header {
-    background-color: black;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-  }
-  
-  /* Estilos para el contenido principal */
-  main {
-    padding: 20px;
-  }
-  
-  /* Estilos para las secciones */
-  section {
-    background-color: white;
-    margin-bottom: 20px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    color: black;
-    margin-bottom: 10px;
-  }
-  
-  p {
-    color: #666;
-  }
-  
-  /* Estilos para el pie de página */
-  footer {
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-  }
-  
-  /* Estilos para hacer el sitio responsive */
-  @media screen and (max-width: 768px) {
-    header {
       padding: 10px 0;
-    }
-  
-    main {
-      padding: 10px;
-    }
-  
-    section {
-      padding: 10px;
-    }
   }
-  
+
+  main {
+      padding: 10px;
+  }
+
+  section {
+      padding: 10px;
+  }
+
+  .map-responsive{
+
+    overflow:hidden;
+
+    padding-bottom:56.25%;
+
+    position:relative;
+
+    height:0;
+
+}
+
+.map-responsive iframe{
+
+    left:0;
+
+    top:0;
+
+    height:100%;
+
+    width:100%;
+
+    position:absolute;
+
+}
+}
