--- a/src/app/pages/home/inicio.component.html
+++ b/src/app/pages/home/inicio.component.html
@@ -13,7 +13,7 @@
     <section class="paragraph-container">
       <h1>¿TIENES DUDAS?</h1>
       <p>Ponte en contacto con nosotros y te ayudaremos en todo lo que necesites</p>
-      <button onclick="redirigirContacto()">Solicitar información</button>
+      <button (click)="redirigirContacto()">Solicitar información</button>
     </section>
     
     <section class="paragraph-container">
