--- a/src/app/pages/login-form/login-form.component.css
+++ b/src/app/pages/login-form/login-form.component.css
@@ -18,12 +18,10 @@ header {
   text-align: center;
 }
 
-/* Estilos para el contenido principal */
 main {
   padding: 20px;
 }
 
-/* Estilos para el formulario de inicio de sesión */
 .login-container {
   background-color: white;
   margin: 20px auto;
@@ -50,14 +48,13 @@ main {
   color: black;
 }
 
-/* Aplicar margen izquierdo y derecho de 0 a los inputs dentro de .form-group */
-.form-group input[type="email"],
+.form-group input[type="text"],
 .form-group input[type="password"] {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin: 0; /* Establecer margen izquierdo y derecho en 0 */
+  margin: 0; 
 }
 
 .form-group small {
@@ -79,13 +76,11 @@ main {
   background-color: #585656;
 }
 
-/* Estilos para los mensajes de error */
 .form-group .is-invalid + div span {
   color: #dc3545;
   font-size: 12px;
 }
 
-/* Estilos para hacer el sitio responsive */
 @media screen and (max-width: 768px) {
   header {
     padding: 10px 0;
