--- a/src/app/main-layout/main-layout.component.css
+++ b/src/app/main-layout/main-layout.component.css
@@ -4,7 +4,7 @@
     color: white;
     padding: 10px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
   }
   .titulo{
@@ -27,24 +27,24 @@
     margin-right: 20px;
   }
   
-  .menu a {
+  .menu a, .close {
     text-decoration: none;
     color: white;
     font-weight: bold;
     transition: color 0.3s;
   }
   
-  .menu a:hover {
+  .menu a:hover, .close:hover {
     color: rgb(7, 221, 221);
+    cursor: pointer;
   }
   
-  /* Estilos para el contenido principal */
+  
   main {
     padding: 20px;
 
   }
   
-/* Estilos para el pie de página al estilo de Apple */
 footer {
   background-color: #f0f0f0;
   padding: 20px 0;
@@ -76,7 +76,7 @@ footer {
 
 .footer-left p:last-child,
 .footer-right p:last-child {
-  margin-bottom: 0; /* Elimina el espacio inferior del último párrafo */
+  margin-bottom: 0; 
 }
 
 .footer-center {
@@ -89,7 +89,6 @@ footer {
   height: auto;
 }
 
-/* Estilo para el texto de derechos de autor */
 .footer-section:last-child {
   flex: 100%;
   text-align: center;
@@ -103,7 +102,6 @@ footer {
 
 
 
-/* Estilos para dispositivos pequeños (por ejemplo, teléfonos) */
 @media screen and (max-width: 768px) {
   .footer-content {
     flex-direction: column;
@@ -112,7 +110,7 @@ footer {
 
   .footer-center,
   .footer-right {
-    flex: none; /* No se ajusta al ancho, ocupará todo el ancho disponible */
+    flex: none; 
     text-align: center;
     margin: 10px 0;
   }
@@ -124,21 +122,23 @@ footer {
 }
 
   
-  /* Estilos para hacer el sitio responsive */
-  @media screen and (max-width: 768px) {
+  
+  @media screen and (max-width: 820px) {
     .header {
       flex-direction: column;
-      align-items: flex-start;
-      text-align: center;
+      align-items: center;
+      
     }
   
     .menu {
       margin-top: 20px;
+
     }
   
     .menu ul {
       flex-direction: column;
       align-items: center;
+      padding: 0;
     }
   
     .menu li {
@@ -154,5 +154,21 @@ footer {
     .footer-left img {
       margin-bottom: 10px;
     }
+    .titulo{
+      background-color: black;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: rgb(7, 221, 221);
+      text-align: center;
+      font-size: 40px;
+      padding-top: 20px; 
+      padding-bottom: 20px;
+    }
   }
   
+  .principal {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
