--- a/src/app/pages/home/inicio.component.css
+++ b/src/app/pages/home/inicio.component.css
@@ -1,4 +1,3 @@
-/* Reset de estilos y ajustes generales */
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +13,6 @@
     color: rgb(7, 221, 221);
   }
   
-  /* Estilos para el encabezado */
   header {
     background-color: black;
     color: white;
@@ -22,12 +20,10 @@
     text-align: center;
   }
   
-  /* Estilos para el contenido principal */
   main {
     padding: 20px;
   }
   
-  /* Estilos para el contenedor de cada párrafo */
   .paragraph-container {
     background-color: white;
     margin-bottom: 20px;
@@ -37,26 +33,22 @@
     text-align: center; /* Centra todo el contenido dentro del contenedor */
   }
   
-  /* Estilos para el h1 en el primer contenedor */
   .paragraph-container:first-child h1 {
     color: rgb(7, 221, 221);
     margin-bottom: 10px;
   }
   
-  /* Estilos para el h1 en el tercer contenedor */
   .paragraph-container:nth-child(3) h1 {
     color: rgb(7, 221, 221);
     margin-bottom: 10px;
   }
   
-  /* Estilos para el párrafo en el tercer contenedor */
   .paragraph-container:nth-child(3) p {
     font-size: 16px; /* Tamaño de fuente ajustado */
-    color: #rgb(7, 221, 221);
+    color: rgb(7, 221, 221);
     margin-bottom: 10px;
   }
   
-  /* Estilos para el botón en el tercer contenedor */
   .paragraph-container:nth-child(3) button {
     background-color: black;
     color: white;
@@ -67,8 +59,8 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    display: block; /* Hace que el botón ocupe todo el ancho del contenedor */
-    margin: 0 auto; /* Centra horizontalmente el botón */
+    display: block; 
+    margin: 0 auto; 
   }
   
   button:hover {
@@ -77,8 +69,7 @@
    
   }
   
-  /* Estilos para hacer el sitio responsive */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 769px) {
     header {
       padding: 10px 0;
     }
@@ -90,20 +81,31 @@
     .paragraph-container {
       padding: 10px;
     }
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+    }
+    .container .icono {
+      width: 100%; 
+      margin-bottom: 20px; 
+    }
   }
   
   .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  max-width: 800px; /* Ajusta el ancho máximo según tus necesidades */
+  max-width: 800px; 
   margin: 0 auto;
 }
 
 .icono {
-  width: 30%; /* Ajusta el ancho de cada logo según tus necesidades */
+  width: 30%; 
   text-align: center;
-  margin-bottom: 20px; /* Espacio entre cada logo */
+  margin-bottom: 20px; 
 }
 
 .icono img {
@@ -150,13 +152,13 @@
   cursor: pointer;
   transition: background-color 0.3s;
   text-decoration: none;
-  display: inline-flex; /* Hace que el botón sea un elemento en línea con contenido centrado verticalmente */
-  align-items: center; /* Centra el contenido verticalmente dentro del botón */
+  display: inline-flex; 
+  align-items: center; 
   margin-top: 10px;
 }
 
 .download-button img {
-  margin-right: 10px; /* Espacio entre la imagen y el texto */
+  margin-right: 10px;
 }
 
 .download-button:hover {
